<resources>
    <string name="auth_main_provider">com.dut.dutfinace.provider.MainProvider</string>
    <string name="host">http://52.192.233.73</string>

    <string name="app_name">DUTFinace</string>
    <string name="action_settings">設定</string>
    <string name="action_logout">登出</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">登入</string>
    <string name="title_register">註冊帳號</string>
    <string name="title_sync">更新</string>
    <string name="title_record">下單記錄</string>

    <!-- Strings related to login -->
    <string name="prompt_email">帳號</string>
    <string name="prompt_password">密碼</string>
    <string name="prompt_re_password">再輸入一次密碼</string>
    <string name="action_sign_in">登入</string>
    <string name="action_sign_in_short">登入</string>
    <string name="error_invalid_email">錯誤的帳號</string>
    <string name="error_invalid_password">無效的密碼</string>
    <string name="error_incorrect_password">密碼錯誤</string>
    <string name="error_field_required">此欄位不能留白</string>

    <!-- Strings related to register -->
    <string name="prompt_register">註冊</string>
    <string name="prompt_registering">正在註冊中...</string>
    <string name="prompt_name">名字</string>
    <string name="prompt_phone">手機</string>
    <string name="prompt_mail">電子郵件</string>
    <string name="prompt_local_phone">家用電話(選填)</string>
    <string name="prompt_identity">身份字號</string>
    <string name="prompt_gender">性別</string>

    <!-- Common -->
    <string name="title_account">概要</string>
    <string name="title_trade">交易</string>
    <string name="title_history">歷史紀錄</string>

    <!-- Profile -->
    <string name="title_available_fund">餘額</string>
    <string name="title_net_liq">淨值</string>
    <string name="title_used_deposit">占用保證金</string>
    <string name="title_available_deposit">可用保證金</string>

    <!-- Order -->
    <string name="title_order">下單</string>
    <string name="title_look_up">看漲</string>
    <string name="title_look_down">看跌</string>
    <string name="title_use_fund">投入資金</string>
    <string name="title_profit_rate">獲利比例(賠率):75%</string>
    <string name="title_activity_register">RegisterActivity</string>

    <!-- NetError -->
    <string name="net_error_io">網路連線不穩，請檢察網路連線</string>

    <!-- Error -->
    <string name="error_input_account">請輸入帳號</string>
    <string name="error_account_length">帳號上限為20個字元</string>
    <string name="error_input_password">請輸入密碼</string>
    <string name="error_password_format">密碼長度上限為20字元，必須包和至少一個大寫和數字</string>
    <string name="error_password_not_same">兩次密碼輸入不一致</string>
    <string name="error_input_name">請輸入名字</string>
    <string name="error_input_phone">請輸入手機</string>
    <string name="error_input_mail">請輸入電子郵件</string>
    <string name="error_invalid_mail_phone">無效的手機或電子郵件</string>
    <string name="error_invalid_local_phone">無效的家用電話</string>
    <string name="error_input_identity">請輸入身份證字號</string>
    <string name="error_invalid_identity">無效的身份證字號</string>
</resources>
